got enough to test with now

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="node_modules/chroma-js/chroma.js"></script>
 <script src="node_modules/invert-color/lib/invert.js"></script>
 
-<script src="src/utility.js"></script>
+
 
 <script src="src/hexer/hex/hexCoordinate.js"></script>
 <script src="src/hexer/hex/hexPixel.js"></script>
@@ -18,10 +18,14 @@
 <script src="src/hexer/hexer.js"></script>
 
 
+<script src="src/spec/specPartBase.js"></script>
 <script src="src/spec/specSignal.js"></script>
+<script src="src/spec/specSignalRange.js"></script>
 <script src="src/spec/spec.js"></script>
-<script src="src/spec/specStack.js"></script>
+<script src="src/spec/specHexStack.js"></script>
 <script src="src/spec/specContainer.js"></script>
+
+<script src="src/hexStrumObject.js"></script>
 
 <script src="src/init.js"></script>
 
