wip Still debugging values in stacks and range filters

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 <script src="src/hexStrumObject.js"></script>
 
+<script src="src/entity/entityBase.js"></script>
+<script src="src/entity/entitySteady.js"></script>
+<script src="src/entity/entityMonoCutoff.js"></script>
 <script src="src/init.js"></script>
 
 </body>
