Made stable enough for first commit (#2)
Fixed up some bugs, and issues with how things worked. Made some basic types

Added readme

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <script src="src/hexStrumObject.js"></script>
 
+<script src="src/entity/entityBase.js"></script>
+<script src="src/entity/entitySteady.js"></script>
+<script src="src/entity/entitySteadyCutoff.js"></script>
+<script src="src/entity/entityRepeater.js"></script>
 <script src="src/init.js"></script>
 
 </body>
